--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-  - package-ecosystem: "npm"
+  - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "daily"
